# system_fastapi

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yml
migrations/: env.py
migrations/versions/: 5b416aa28d44_create_users_table.py  c0605e694a98_added_created_at_and_update_at_todo_.py  fce4ef34f812_create_todos_table.py
src/: app.py  database.py  models.py  schemas.py  security.py  settings.py
src/routers/: auth.py  todos.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
